# bleh

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
barcode/: Cargo.toml
centroid/: Cargo.toml
centroid/src/: main.rs
colors/: Cargo.toml
examples/: barcode.rs  centroid.rs  lights.rs  particles.rs  swirly.rs
gunk/: Cargo.toml
gunk/src/: main.rs
particles/: Cargo.toml
shaders/: lights.frag
src/: animation.rs  lib.rs  main.rs  shapes.rs
swirly/: Cargo.toml
swirly/src/: main.rs
tutorial/: Cargo.toml
tutorial/src/: main.rs
wah/: Cargo.toml
wah/src/: main.rs
